#15, #12, using the server API now. #13, #14 form improved.

--- a/src/assets/i18n/et.json
+++ b/src/assets/i18n/et.json
@@ -35,7 +35,7 @@
         "postIndex": "POSTIINDEKS",
         "country": "RIIK",
         "deliveryCountry": "SAADETISE ÜLEANDMISE RIIK",
-        "serviceCode": "TEENUSE KOOD",
+        "serviceNumber": "TEENUSE KOOD",
         "edit": "MUUDA"
 
     }
