--- a/src/assets/i18n/et.json
+++ b/src/assets/i18n/et.json
@@ -7,9 +7,9 @@
     "info": "Lorem ipsum dolor sit amet, consectetur adispiscing elit. Suspendisse euismod mauris at ligula volutpat vulputate vitae ut dolor. Vivamus dignissim id purus quis congue. Sed sid amet mollis metus.",
     "recipient": "SAADETISE KÄTTESAAJA",
     "deliveryCountry": "SAADETISE ÜLEANDMISE RIIK",
-    "name": "SINU NIMI",
-    "mobile": "SINU MOBIILINUMBER",
-    "email": "SINU E-MAIL",
+    "name": "NIMI",
+    "mobile": "MOBIILINUMBER",
+    "email": "E-MAIL",
     "button": {
       "submitReturn": "TAGASTA TOODE"
     }
@@ -55,5 +55,15 @@
     "deliveryCountryNotChosen": "Saadetise üleandmise riik valimata.",
     "recipientNotChosen": "Saadetise kättesaaja valimata.",
     "noName": "Nime lahter täitmata."
+  },
+  "filter": {
+    "title": "FILTREERI",
+    "placeholder": {
+      "axapta": "AXAPTA",
+      "clientName": "NIMI",
+      "street": "TÄNAV",
+      "city": "ASULA",
+      "country": "RIIK"
+    }
   }
 }
