--- a/src/assets/i18n/et.json
+++ b/src/assets/i18n/et.json
@@ -54,7 +54,8 @@
     "failed": "Ebaõnnestus!",
     "deliveryCountryNotChosen": "Saadetise üleandmise riik valimata.",
     "recipientNotChosen": "Saadetise kättesaaja valimata.",
-    "noName": "Nime lahter täitmata."
+    "noName": "Nime lahter täitmata.",
+    "doesNotExist": "Saadetise kättesaajat ei eksisteeri andmetes."
   },
   "filter": {
     "title": "FILTREERI",
