--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,7 +54,8 @@
     "failed": "Failed!",
     "deliveryCountryNotChosen": "Delivery country not chosen.",
     "recipientNotChosen": "Recipient not chosen.",
-    "noName": "No name entered."
+    "noName": "No name entered.",
+    "doesNotExist": "Recipient does not exist."
   },
   "filter": {
     "title": "FILTER",
