--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,7 +44,8 @@
       "country": "COUNTRY",
       "deliveryCountry": "DELIVERY COUNTRY",
       "serviceNumber": "SERVICE NUMBER",
-      "edit": "EDIT"
+      "edit": "EDIT",
+      "remove": "REMOVE"
 
     },
     "logout": "Log out"
