--- a/src/assets/i18n/lt.json
+++ b/src/assets/i18n/lt.json
@@ -44,8 +44,8 @@
       "country": "ŠALIS",
       "deliveryCountry": "PRISTATYMO ŠALIS",
       "serviceNumber": "PASLAUGOS NUMERIS",
-      "edit": "REDAGUOTI"
-
+      "edit": "REDAGUOTI",
+      "remove": "IŠTRINTI"
     },
     "logout": "Atsijungti"
   },
