cleaned and fixed the user form html file

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,8 +5,8 @@
   },
   "user": {
     "info": "Lorem ipsum dolor sit amet, consectetur adispiscing elit. Suspendisse euismod mauris at ligula volutpat vulputate vitae ut dolor. Vivamus dignissim id purus quis congue. Sed sid amet mollis metus.",
-    "recipient": "Recipient",
-    "deliveryCountry": "Delivery country",
+    "recipient": "RECIPIENT",
+    "deliveryCountry": "DELIVERY COUNTRY",
     "name": "NAME",
     "mobile": "MOBILE NUMBER",
     "email": "E-MAIL",
