--- a/src/assets/i18n/lv.json
+++ b/src/assets/i18n/lv.json
@@ -11,7 +11,7 @@
     "mobile": "TELEFONA NUMURS",
     "email": "E-PASTS",
     "button": {
-      "submitReturn": "Iesniegt"
+      "submitReturn": "IESNIEGT"
     }
   },
   "success": {
