--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -56,7 +56,9 @@
     "deliveryCountryNotChosen": "Delivery country not chosen.",
     "recipientNotChosen": "Recipient not chosen.",
     "noName": "No name entered.",
-    "doesNotExist": "Recipient does not exist."
+    "doesNotExist": "Recipient does not exist.",
+    "invalidNumber": "Mobile number is invalid.",
+    "invalidEmail": "E-mail is invalid."
   },
   "filter": {
     "title": "FILTER",
