--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -56,7 +56,9 @@
     "deliveryCountryNotChosen": "Состояние передачи не выбрано.",
     "recipientNotChosen": "Распаковка груза.",
     "noName": "Поле имени пусто.",
-    "doesNotExist": "Получатель отгрузки не существует в данных."
+    "doesNotExist": "Получатель отгрузки не существует в данных.",
+    "invalidNumber": "Номер мобильного телефона недействителен.",
+    "invalidEmail": "Недействительный адрес электронной почты."
   },
   "filter": {
     "title": "ФИЛЬТР",
