--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -69,5 +69,21 @@
       "city": "ГОРОД",
       "country": "СТРАНА"
     }
+  },
+  "dialog": {
+    "title": {
+      "remove": "Вы действительно хотите удалить этого клиента?",
+      "edit": "Вы действительно хотите отредактировать этого клиента?",
+      "new": "Вы действительно хотите создать нового клиента?"
+    },
+    "message": {
+      "remove": "Клиент будет удален.",
+      "edit": "Данные Клиента будут изменены.",
+      "new": "Будет создан новый клиент."
+    },
+    "option": {
+      "accept": "да",
+      "decline": "нет"
+    }
   }
 }
