#78 lisatud teade vale parooli või kasutaja puhul

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,7 +58,8 @@
     "noName": "No name entered.",
     "doesNotExist": "Recipient does not exist.",
     "invalidNumber": "Mobile number is invalid.",
-    "invalidEmail": "E-mail is invalid."
+    "invalidEmail": "E-mail is invalid.",
+    "invalidLogin": "Wrong username or password."
   },
   "filter": {
     "title": "FILTER",
