--- a/src/assets/i18n/lt.json
+++ b/src/assets/i18n/lt.json
@@ -57,7 +57,8 @@
     "noName": "Vardas laukas yra tuščias.",
     "doesNotExist": "Duomenų gavėjo duomenų nėra.",
     "invalidNumber": "Mobiliojo telefono numeris neteisingas.",
-    "invalidEmail": "El. Paštas neteisingas."
+    "invalidEmail": "El. Paštas neteisingas.",
+    "invalidLogin": "Neteisingas vartotojo vardas arba slaptažodis."
   },
   "filter": {
     "title": "FILTRAS",
