--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -58,7 +58,8 @@
     "noName": "Поле имени пусто.",
     "doesNotExist": "Получатель отгрузки не существует в данных.",
     "invalidNumber": "Номер мобильного телефона недействителен.",
-    "invalidEmail": "Недействительный адрес электронной почты."
+    "invalidEmail": "Недействительный адрес электронной почты.",
+    "invalidLogin": "Неверное имя пользователя или пароль."
   },
   "filter": {
     "title": "ФИЛЬТР",
