--- a/src/assets/i18n/et.json
+++ b/src/assets/i18n/et.json
@@ -45,7 +45,8 @@
         "deliveryCountry": "SAADETISE ÜLEANDMISE RIIK",
         "serviceNumber": "TEENUSE KOOD",
         "edit": "MUUDA",
-        "remove": "EEMALDA"
+        "remove": "EEMALDA",
+        "close": "SULGE"
 
     },
     "logout": "Logi välja"
@@ -75,16 +76,18 @@
     "title": {
       "remove": "Kas olete kindel, et soovite ärikliendi eemaldada?",
       "edit": "Kas olete kindel, et soovite ärikliendi andmeid muuta?",
-      "new": "Kas olete kindel, et soovite uut ärikliendi luua?"
+      "new": "Kas olete kindel, et soovite uut ärikliendi luua?",
+      "close": "Kas olete kindel, et soovite sulgeda?"
     },
     "message": {
       "remove": "Äriklient eemaldatakse.",
       "edit": "Ärikliendi andmed muudetakse.",
-      "new": "Uus äriklient lisatakse nimekirja."
+      "new": "Uus äriklient lisatakse nimekirja.",
+      "close": "Kõik muudatused lähevad kaotsi."
     },
     "option": {
       "accept": "Jah",
-      "decline": "ei"
+      "decline": "Ei"
     }
   }
 }
