--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -45,8 +45,8 @@
       "deliveryCountry": "СТРАН ПЕРЕДАЧИ",
       "serviceNumber": "КОД СЕРВИСА",
       "edit": "РЕДАКТИРОВАТЬ",
-      "remove": "УДАЛИТЬ"
-
+      "remove": "УДАЛИТЬ",
+      "close": "ЗАКРЫТЬ"
     },
     "logout": "выйти"
   },
@@ -75,12 +75,14 @@
     "title": {
       "remove": "Вы действительно хотите удалить этого клиента?",
       "edit": "Вы действительно хотите отредактировать этого клиента?",
-      "new": "Вы действительно хотите создать нового клиента?"
+      "new": "Вы действительно хотите создать нового клиента?",
+      "close": "Вы действительно хотите закрыть?"
     },
     "message": {
       "remove": "Клиент будет удален.",
       "edit": "Данные Клиента будут изменены.",
-      "new": "Будет создан новый клиент."
+      "new": "Будет создан новый клиент.",
+      "close": "Все изменения будут отменены."
     },
     "option": {
       "accept": "да",
