--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,7 @@
     "button": "AGAIN",
     "return": "BACK TO OMNIVA WEBPAGE",
     "title": "Success!",
-    "modifiedData": "Business clients data updated!",
+    "modifiedData": "Business client data updated!",
     "newData": "New business client added."
   },
   "login": {
