--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -46,7 +46,8 @@
       "serviceNumber": "КОД СЕРВИСА",
       "edit": "РЕДАКТИРОВАТЬ",
       "remove": "УДАЛИТЬ",
-      "close": "ЗАКРЫТЬ"
+      "close": "ЗАКРЫТЬ",
+      "noClientsFound": "Клиентов не найдено с найденным фильтром."
     },
     "logout": "выйти"
   },
