#63 corrected the error message for invalid name.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -57,6 +57,7 @@
     "deliveryCountryNotChosen": "Delivery country not chosen.",
     "recipientNotChosen": "Recipient not chosen.",
     "noName": "No name entered.",
+    "invalidName": "Name is invalid.",
     "doesNotExist": "Recipient does not exist.",
     "invalidNumber": "Mobile number is invalid.",
     "invalidEmail": "E-mail is invalid.",
