--- a/src/assets/i18n/et.json
+++ b/src/assets/i18n/et.json
@@ -58,6 +58,7 @@
     "deliveryCountryNotChosen": "Saadetise üleandmise riik valimata.",
     "recipientNotChosen": "Saadetise kättesaaja valimata.",
     "noName": "Nime lahter täitmata.",
+    "invalidName": "Nimi pole õige.",
     "doesNotExist": "Saadetise kättesaajat ei eksisteeri andmetes.",
     "invalidNumber": "Mobiilinumber ei vasta nõuetele.",
     "invalidEmail": "E-mail ei vasta nõuetele.",
