--- a/src/assets/i18n/lt.json
+++ b/src/assets/i18n/lt.json
@@ -57,6 +57,7 @@
     "deliveryCountryNotChosen": "Perkėlimo būsena nėra pasirinkta.",
     "recipientNotChosen": "Išpakavimas siuntą.",
     "noName": "Vardas laukas yra tuščias.",
+    "invalidName": "Vardas neteisingas.",
     "doesNotExist": "Duomenų gavėjo duomenų nėra.",
     "invalidNumber": "Mobiliojo telefono numeris neteisingas.",
     "invalidEmail": "El. Paštas neteisingas.",
