--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -57,6 +57,7 @@
     "deliveryCountryNotChosen": "Состояние передачи не выбрано.",
     "recipientNotChosen": "Распаковка груза.",
     "noName": "Поле имени пусто.",
+    "invalidName": "Имя недействительно.",
     "doesNotExist": "Получатель отгрузки не существует в данных.",
     "invalidNumber": "Номер мобильного телефона недействителен.",
     "invalidEmail": "Недействительный адрес электронной почты.",
