--- a/src/assets/i18n/et.json
+++ b/src/assets/i18n/et.json
@@ -62,7 +62,8 @@
     "doesNotExist": "Saadetise kättesaajat ei eksisteeri andmetes.",
     "invalidNumber": "Mobiilinumber ei vasta nõuetele.",
     "invalidEmail": "E-mail ei vasta nõuetele.",
-    "invalidLogin": "Vale kasutaja või parool."
+    "invalidLogin": "Vale kasutaja või parool.",
+    "failedReturn": "Something went wrong while trying to return a package..."
   },
   "filter": {
     "title": "FILTREERI",
