--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -61,7 +61,8 @@
     "doesNotExist": "Получатель отгрузки не существует в данных.",
     "invalidNumber": "Номер мобильного телефона недействителен.",
     "invalidEmail": "Недействительный адрес электронной почты.",
-    "invalidLogin": "Неверное имя пользователя или пароль."
+    "invalidLogin": "Неверное имя пользователя или пароль.",
+    "failedReturn": "Что-то пошло не так, когда вы пытались вернуть пакет..."
   },
   "filter": {
     "title": "ФИЛЬТР",
