--- a/src/assets/i18n/lt.json
+++ b/src/assets/i18n/lt.json
@@ -15,7 +15,7 @@
     }
   },
   "success": {
-    "info": "grįžti sėkmingai. Lorem ipsum dolor sit amet, consectetur adispiscing elit. Suspendisse euismod mauris at ligula volutpat vulputate vitae ut dolor. Vivamus dignissim id purus quis congue. Sed sid amet mollis metus.",
+    "info": "SĖKMĖ!. Informacija buvo perduodama Omniva sistemai. Būkite pasirengę gauti el. Laišką ir / ar SMS žinutę.",
     "button": "Grįžti atgal",
     "return": "GRĮŽTI Į OMNIPA PUSLAPĮ",
     "title": "Sėkmė!",
