--- a/src/assets/i18n/et.json
+++ b/src/assets/i18n/et.json
@@ -4,7 +4,7 @@
     "adminTitle": "ÄRIKLIENTIDE HALDUS"
   },
   "user": {
-    "info": "Lorem ipsum dolor sit amet, consectetur adispiscing elit. Suspendisse euismod mauris at ligula volutpat vulputate vitae ut dolor. Vivamus dignissim id purus quis congue. Sed sid amet mollis metus.",
+    "info": "Teretulemast Omniva tagastusvormistus lehele. Täida järgnevad väljad ning vajuta \"Tagasta toode\". Sulle saadetakse email ja/või SMS uute juhistega.",
     "recipient": "SAADETISE KÄTTESAAJA",
     "deliveryCountry": "SAADETISE ÜLEANDMISE RIIK",
     "name": "NIMI",
