--- a/src/assets/i18n/lt.json
+++ b/src/assets/i18n/lt.json
@@ -4,7 +4,7 @@
     "adminTitle": "VERSLO KLIENTŲ VALDYMAS"
   },
   "user": {
-    "info": "Lorem ipsum dolor sit amet, consectetur adispiscing elit. Suspendisse euismod mauris at ligula volutpat vulputate vitae ut dolor. Vivamus dignissim id purus quis congue. Sed sid amet mollis metus.",
+    "info": "Laipni lūdzam Omniva komplekta atgriešanas veidlapā. Aizpildiet tālāk minētos laukus un noklikšķiniet uz iesniegt, lai atgrieztu paketi. Pēc tam veiksmīgi ievadot e-pastu un / vai SMS ar jaunām instrukcijām.",
     "recipient": "LAIVO ĮRENGINYS",
     "deliveryCountry": "TRANSMISIJOS ŠALIS",
     "name": "VARDAS",
