--- a/src/assets/i18n/lv.json
+++ b/src/assets/i18n/lv.json
@@ -4,7 +4,7 @@
     "adminTitle": "BIZNESA KLIENTU PĀRVALDĪBA"
   },
   "user": {
-    "info": "Lorem ipsum dolor sit amet, consectetur adispiscing elit. Suspendisse euismod mauris at ligula volutpat vulputate vitae ut dolor. Vivamus dignissim id purus quis congue. Sed sid amet mollis metus.",
+    "info": "Sveiki atvykę į \"Omniva\" paketų grąžinimo formą. Užpildykite šiuos laukus ir spustelėkite \"pateikti\", kad grąžintumėte paketą. Sėkmingai užpildžius, gausite el. Laišką ir / arba SMS su naujais nurodymais.",
     "recipient": "KUĢOŠANAS IERĪCES",
     "deliveryCountry": "PĀRSŪTĪŠANAS VALSTS",
     "name": "VĀRDS",
