--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -4,7 +4,7 @@
     "adminTitle": "УПРАВЛЕНИЕ БИЗНЕС-КЛИЕНТАМИ"
   },
   "user": {
-    "info": "Lorem ipsum dolor сидит агент, consectetur adispiscing elit. Приостановить euismod mauris при ligula volutpat vulputate vitae ut dolor. Vivamus dignissim id purus quis congue. Это был год в молли.",
+    "info": "Добро пожаловать в форму возврата пакета Omniva. Заполните следующие поля и нажмите «Отправить», чтобы вернуть пакет. После успешного заполнения вы получите электронное письмо и / или SMS с новыми инструкциями.",
     "recipient": "УСТРОЙСТВО ПЕРЕВОЗКИ",
     "deliveryCountry": "СТРАН ПЕРЕДАЧИ",
     "name": "ИМЯ",
